# coding-examples-rust

./: .gitignore  LICENSE  README.md
OpenCV/multi_template_matching/: Cargo.toml  README.md
OpenCV/multi_template_matching/src/: main.rs
stm32f303re/: Cargo.toml  Embed.toml  README.md
stm32f303re/src/: main.rs
